[project]
name = "vulnmonitor"
version = "0.1.0"
description = "企业级漏洞情报监控系统 - 自动化采集、智能去重、精准过滤和实时告警"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "waitress>=2.1.2",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "click>=8.1.7",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
vuln-monitor = "vuln_monitor.cli.commands:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
